Making use of jpa persistence!!!!